# StuAuth

./: .editorconfig  .gitignore  App.config  App.xaml  App.xaml.cs  AppId.txt  Build.ps1  CMakeLists.txt  CMakeUserPresets.json  Import.xaml  Import.xaml.cs  LICENSE.txt  Main.xaml  Main.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NewAccount.xaml  NewAccount.xaml.cs  NewAccount2.xaml  NewAccount2.xaml.cs  README.md  SelectAccount.xaml  SelectAccount.xaml.cs  Settings.cs  StuAuth.csproj  StuAuth.sln  Translate.ps1  app.rc.in  resources.qrc
Asset/: Thumbs.db
Asset/translations/: stuauth_bz.qm  stuauth_bz.ts  stuauth_en.qm  stuauth_en.ts  stuauth_fr.ts  stuauth_ja.qm  stuauth_ja.ts
Classe/: AccountManager.cs  EncryptionManager.cs  Google.cs  Google.proto  HttpServer.cs  Loc.cs
Installer/: setup.iss
Page/: Import.xaml  Import.xaml.cs  Main.xaml  Main.xaml.cs  NetworkParameters.xaml  NetworkParameters.xaml.cs  NewAccount.xaml  NewAccount.xaml.cs  NewAccount2.xaml  NewAccount2.xaml.cs  SelectAccount.xaml  SelectAccount.xaml.cs
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.br.resx  Resources.en.resx  Resources.fr.resx  Resources.ja.resx  Resources.resx  Settings.Designer.cs  Settings.settings
Ressources/: Ressources.en.resx  Ressources.fr.resx
Setup StuAuth/: Setup StuAuth.aip  Setup StuAuth.aiproj  Setup StuAuth.back(21.4).aip  Setup StuAuth.back(21.7.1).aip
Setup StuAuth/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.settings
Setup StuAuth/Setup StuAuth-SetupFiles/: Setup StuAuth.msi
Setup StuAuth/Setup StuAuth-cache/part1/: disk1.cab  output-info.ini
Setup StuAuth/Setup StuAuth-cache/part2/: disk1.cab  output-info.ini
StuAuth Installer/: StuAuth Installer.aip  StuAuth Installer.aiproj
StuAuth Installer/StuAuth Installer-SetupFiles/: StuAuth Installer.msi
StuAuth Installer/StuAuth Installer-cache/part1/: output-info.ini
StuAuth Installer/StuAuth Installer-cache/part2/: disk1.cab  output-info.ini
src/: main.cpp
src/commun/: AppInitializer.cpp  AppInitializer.h  CryptoInitializer.h  CryptoUtils.cpp  CryptoUtils.h  LockManager.h  TranslationManager.cpp  TranslationManager.h  TrayManager.cpp  TrayManager.h
src/commun/security/: AuthManager.cpp  AuthManager.h  CryptoInitializer.cpp  CryptoUtils.cpp  CryptoUtils.h  LockManager.cpp  RuntimeSecret.cpp  RuntimeSecret.h
src/core/: AccountManager.cpp  AccountManager.h  ProtoParser.cpp  ProtoParser.h  TotpEngine.cpp  TotpEngine.h
src/network/: HttpServer.cpp  HttpServer.h
src/ui/: ImportPage.cpp  ImportPage.h  MasterPasswordPopup.cpp  MasterPasswordPopup.h  NetworkPage.cpp  NetworkPage.h  NewAccount2Page.cpp  NewAccount2Page.h  NewAccountPage.cpp  NewAccountPage.h  SelectAccountPage.cpp  SelectAccountPage.h  StuauthWindow.cpp  StuauthWindow.h
